# LINRAR

./: .gitignore  CI_CD.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PACKAGING.md  README.md  build_all.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CHANGELOG.md  README.md  build-and-release.yml  build-test.yml  release.yml
assets/icons/: README.md  generate_png_from_svg.sh
packaging/: README.md  build_packages.sh
packaging/appimage/: build_appimage.sh  linrar.desktop
packaging/debian/: changelog  control  copyright  rules
packaging/rpm/: linrar.spec
resources/: linrar.qrc
src/: AboutDialog.cpp  AboutDialog.h  ArchiveHandler.cpp  ArchiveHandler.h  ArchiveModel.cpp  ArchiveModel.h  ArchiveView.cpp  ArchiveView.h  FileBrowser.cpp  FileBrowser.h  MainWindow.cpp  MainWindow.h  ProcessManager.cpp  ProcessManager.h  ProgressDialog.cpp  ProgressDialog.h  SettingsManager.cpp  SettingsManager.h  main.cpp
src/handlers/: RarHandler.cpp  RarHandler.h  SevenZipHandler.cpp  SevenZipHandler.h  TarHandler.cpp  TarHandler.h  ZipHandler.cpp  ZipHandler.h
src/utils/: ArchiveUtils.cpp  ArchiveUtils.h  FormatDetector.cpp  FormatDetector.h
ui/: MainWindow.ui
